--- a/examples/hello-mui/index.html
+++ b/examples/hello-mui/index.html
@@ -21,7 +21,7 @@
 			<ul id="list" class="mui-table-view mui-table-view-chevron">
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" href="examples/accordion.html">
-						accordion（折叠面板）123
+						accordion（折叠面板）
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
